@@ -1,7 +1,7 @@
 // ------------------------------------------------------------------------------
 //  <autogenerated>
 //      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.1433
+//      Mono Runtime Version: 2.0.50727.42
 // 
 //      Changes to this file may cause incorrect behavior and will be lost if 
 //      the code is regenerated.
@@ -50,6 +50,12 @@ namespace MonoDevelop.SourceEditor.OptionPanels {
         private Gtk.CheckButton tabAsReindentCheckbutton;
         
         private Gtk.CheckButton tabsAfterNonTabsCheckbutton;
+        
+        private Gtk.HBox hbox3;
+        
+        private Gtk.Label label2;
+        
+        private Gtk.ComboBox controlLeftRightCombobox;
         
         protected virtual void Build() {
             Stetic.Gui.Initialize(this);
@@ -240,6 +246,33 @@ namespace MonoDevelop.SourceEditor.OptionPanels {
             w18.Position = 3;
             w18.Expand = false;
             w18.Fill = false;
+            // Container child vbox1.Gtk.Box+BoxChild
+            this.hbox3 = new Gtk.HBox();
+            this.hbox3.Name = "hbox3";
+            this.hbox3.Spacing = 6;
+            // Container child hbox3.Gtk.Box+BoxChild
+            this.label2 = new Gtk.Label();
+            this.label2.Name = "label2";
+            this.label2.LabelProp = Mono.Unix.Catalog.GetString("_Control left/right mode");
+            this.label2.UseUnderline = true;
+            this.hbox3.Add(this.label2);
+            Gtk.Box.BoxChild w19 = ((Gtk.Box.BoxChild)(this.hbox3[this.label2]));
+            w19.Position = 0;
+            w19.Expand = false;
+            w19.Fill = false;
+            // Container child hbox3.Gtk.Box+BoxChild
+            this.controlLeftRightCombobox = Gtk.ComboBox.NewText();
+            this.controlLeftRightCombobox.Name = "controlLeftRightCombobox";
+            this.hbox3.Add(this.controlLeftRightCombobox);
+            Gtk.Box.BoxChild w20 = ((Gtk.Box.BoxChild)(this.hbox3[this.controlLeftRightCombobox]));
+            w20.Position = 1;
+            w20.Expand = false;
+            w20.Fill = false;
+            this.vbox1.Add(this.hbox3);
+            Gtk.Box.BoxChild w21 = ((Gtk.Box.BoxChild)(this.vbox1[this.hbox3]));
+            w21.Position = 4;
+            w21.Expand = false;
+            w21.Fill = false;
             this.Add(this.vbox1);
             if ((this.Child != null)) {
                 this.Child.ShowAll();
